# linux-shell-tool

./: .gitignore  CMakeLists.txt  README.md  cmake on bsd  makefile  makefileNEW  shell_tool  todo.txt
includes/: execute.h  execute.h~  window.h  window.h~
src/: execute.c  execute.c~  main.c  main.c~  window.c  window.c~
